# nba-season-similarity

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/features/: career_year_features.parquet  player_awards.parquet  player_features.parquet  season_awards.parquet
scripts/: cache_awards.py
src/: __init__.py
src/app/: streamlit_app.py
src/data/: __init__.py  bballref_scraper.py  cache_manager.py  comprehensive_stats.py  data_loader.py  nba_api_client.py
src/features/: __init__.py  build_features.py  career_vectors.py  composition_stats.py  era_adjustments.py  feature_pipeline.py
src/similarity/: __init__.py  distance_metrics.py  neighbor_engine.py  trajectory_matcher.py  trajectory_matching.py  trajectory_projector.py  weighted_matcher.py
tests/: __init__.py
